JAVA-18131 Fixed FormatNumberUnitTest and removed core-java-security from upgrading to 17